argocd/applications/sealed-secrets/ingressroute-sealed-secrets-k8s-private.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sealed-secrets-private
  namespace: sealed-secrets
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sealed-secrets.k8s.proompteng.ai`)
      services:
        - name: sealed-secrets-web
          port: 80
  tls:
    secretName: wildcard-k8s-proompteng-ai-tls
